# Hammurabi

./: .clang-format  CMakeLists.txt
src/: main.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  GameData.hpp  GameHistory.hpp
src/Random/: CMakeLists.txt  Random.cpp  Random.hpp
src/Serialisation/: CMakeLists.txt  Serialisation.hpp
src/UserInteraction/: CMakeLists.txt  UserInteraction.cpp  UserInteraction.hpp
tests/: MainTest.cpp  RandomTest.cpp  TestRunner.h  UserInteractionTest.cpp
